[package]
name = "discord-gateway-test"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.11"
async-tungstenite = "0.10"
futures = "0.3"
surf = "2.1"
async-std = { version = "1.7", features = ["attributes"] }
async-tls = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
